Removed scrollbars from task list.

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -17,3 +17,14 @@
 .button-secondary-destructive {
   @apply px-3 py-1 rounded-md bg-white disabled:opacity-20 disabled:cursor-default border-2 border-destructive-500 text-destructive-700 hover:text-destructive-900 hover:bg-destructive-50 transition ease-in-out duration-500;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
