Revert "Upgraded to TailwindCSS V3"
This reverts commit 6808ed37f2e953c8c53e49fd3811d19f487eab24.

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@tailwind variants;
+@tailwind screens;
 
 .button-primary {
   @apply bg-primary-500 hover:bg-primary-700 font-medium transform ease-in-out duration-500 text-white px-3 py-2 rounded;
