--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -22,6 +22,11 @@ body {
   @apply px-3 py-1 rounded-md bg-white disabled:opacity-20 disabled:cursor-default border-2 border-destructive-500 text-destructive-700 hover:text-destructive-900 hover:bg-destructive-50 transition ease-in-out duration-500;
 }
 
+/* Override MUI gutter to match element padding */
+.MuiTypography-gutterBottom {
+  margin-bottom: 12px;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
