--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -10,6 +10,26 @@ body {
   display: flex;
 }
 
+.parallax {
+  background-size: cover;
+  box-sizing: border-box;
+  width: 100%;
+  height: 90vh;
+  /* Since the parallax elements still consume space, we set the margin to undo
+     the height of this parallax element making it essentially consume 0 space.
+  */
+  margin-bottom: -90vh;
+}
+.parallax.forest {
+  transform: scale(10) translate3d(200px, 136.1px, -9px) !important;
+}
+.parallax.moon {
+  transform: scale(100) translate3d(-50px, -720.12px, -99px) !important;
+}
+#__next {
+  overflow: scroll;
+}
+
 .button-primary {
   @apply bg-primary-500 hover:bg-primary-700 font-medium transform ease-in-out duration-500 text-white px-3 py-2 rounded;
 }
