--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -44,7 +44,8 @@ a:hover {
   transform: scale(100) translate3d(-50px, -720.12px, -99px) !important;
 }
 #__next {
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .button-primary {
