--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -9,19 +9,8 @@ body {
   width: 100vw;
   display: flex;
 }
-a,
-span.link {
+a {
   color: blue;
-}
-
-a:visited,
-span.visited {
-  color: purple;
-}
-
-a:active,
-span.active {
-  color: red;
 }
 a:hover {
   text-decoration: underline;
